# Engine

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/Debugging/: ExceptionBase.hpp
include/Graphics/: GLFunctions.hpp  Graphics.hpp
include/Tools/: Singleton.hpp  types.hpp
include/Window/: Context.hpp  GuiContext.hpp  GuiContextManager.hpp  Window.hpp  WindowManager.hpp
include/glad/: glad.h
source/: glad.c  main.cpp
source/Debugging/: ExceptionBase.cpp
source/Engine/: main.cpp
source/Graphics/: Graphics.cpp
source/ImGui/: imgui_impl_glfw.cpp
source/Window/: Context.cpp  GuiContext.cpp  GuiContextManager.cpp  Window.cpp  WindowManager.cpp
